# practice_book

./: .gitignore  .swp  CMakeLists.txt  readme.md
graph/: frame_and_slice.ge  nalu.ge  parser.pl  time.ge
resource/: sintel.ps
scripts/: build.sh  make.sh  test.sh
src/: align.cpp  bitwise.h  calculate.cpp  deduction.cpp  flv.cpp  format.cpp  fstream.cpp  h264.cpp  html_element.h  html_gen.h  html_node.cpp  html_node.h  html_printer.cpp  html_printer.h  html_vnode.cpp  html_vnode.h  jbuffer.h  lambda.cpp  mem_pool.h  search.cpp  shared_ptr.h  signed.cpp  smart_ptr.h  sort.cpp  test.cpp  test_bitwise.cpp  test_html_gen.cpp  test_html_printer.cpp  test_mem_pool.cpp  test_new.cpp  test_shared_ptr.cpp  thread.cpp  time.cpp  winsock_init.cpp  yuv.cpp
src/media/: aac.cpp  bit_gen.h  bit_parser.h  bit_utils.cpp  bit_utils.h  bitstream.h  flv.cpp  h264.cpp  h264_dec.h  pcm.cpp  ps_parser.cpp  ps_parser.h  rtp.h  rtp_code.h  rtp_h264.h  rtp_h265.h  rtp_h265_code.h  test_bit_utils.cpp  test_bitstream.cpp  test_rtp.cpp  yuv.cpp
src/network/: network.cpp  network.h  winsock_init.cpp
src/parser/lexer/: list_lexer.h  list_parser.cpp  list_parser.h  list_parser_ex.cpp  list_parser_ex.h  list_token.cpp  list_token.h  parser_error.cpp  parser_error.h  parser_lexer.h  parser_token.h  test_list.cpp
